[package]
name = "actix-todo"
version = "0.1.0"
authors = ["gstbimo <gstbimo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
serde = {version = "1.0.111", features = ["derive"]}