[package]
name = "actix-todo"
version = "0.1.0"
authors = ["gstbimo <gstbimo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.1.1"
actix-web = "2.0.0"
serde = {version = "1.0.111", features = ["derive"]}
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "0.1.8"
tokio-pg-mapper-derive = "0.1.5"
deadpool-postgres = "0.5.5"
tokio-postgres = "0.5.4"